<resources>
    <string name="app_name">Health Management App</string>
    <!-- ************** MainActivity ***************** -->
    <string name="Main_tvTitle">Welcome to Health Buddy</string>
    <string name="Main_btnLogin">Login</string>
    <string name="Main_btnSignUp">Sign Up</string>
    <string name="Main_imgMain">Image Main</string>
    <!-- ************** SignUpActivity *************** -->
    <string name="SignUp_etUserID">User ID</string>
    <string name="SignUp_etPassword">Password</string>
    <string name="SignUp_rdbPatient">Patient</string>
    <string name="SignUp_rdbDoctor">Doctor</string>
    <string name="SignUp_rdbCashier">Cashier</string>
    <string name="SignUp_etFullName">Full Name</string>
    <string name="SignUp_etAllergies">Allergies</string>
    <string name="SignUp_etDiseases">Diseases</string>
    <string name="SignUp_etClinicPostalCode">Postal Code</string>
    <string name="SignUp_etLicense">License Number</string>
    <string name="SignUp_btnSignUp">Sign Up</string>
    <!-- ************** LoginActivity **************** -->
    <string name="Login_etUserID">User ID</string>
    <string name="Login_etPassword">Password</string>
    <string name="Login_btnLogin">Login</string>
    <!-- ************** PatientAccount **************** -->
    <string name="PatientAccount_tvAllergies">Allergies</string>
    <string name="PatientAccount_tvDiseases">Diseases</string>
    <string name="PatientAccount_btnFoodTracker">Food Tracker</string>
    <string name="PatientAccount_btnFindDoctor">Find a Doctor</string>
    <string name="PatientAccount_btnLogout">Log Out</string>
    <string name="PatientAccount_btnInfo">User Details</string>
    <!-- ************** PatientInfo **************** -->
    <string name="PatientInfo_tvPatientDetails">Patient Details</string>
    <string name="PatientInfo_tvInstruction">Change information below to update details</string>
    <string name="PatientInfo_tvUserID">User ID</string>
    <string name="PatientInfo_tvPassword">Password</string>
    <string name="PatientInfo_tvFullName">Full Name</string>
    <string name="PatientInfo_tvPostalCode">Postal Code</string>
    <string name="PatientInfo_tvAllergies">Allergies</string>
    <string name="PatientInfo_tvDiseases">Diseases</string>
    <string name="PatientInfo_btnSave">Save Changes</string>
    <!-- ************** PatientFindDoctor **************** -->
    <string name="PatientFindDoctor_tvTitle">Find a Doctor</string>
    <string name="PatientFindDoctor_tvAvailable">Available Doctors</string>
    <!-- ************** PatientAppointment **************** -->
    <string name="PatientAppointment_tvTitle">Book an Appointment</string>
    <string name="PatientAppointment_etTime">Appointment Time</string>
    <string name="PatientAppointment_timePicker">Time Picker</string>
    <string name="PatientAppointment_btnBook">Book Appointment</string>
    <string name="PatientAppointment_btnChat">Chat History</string>
    <!-- ************** Food Tracker **************** -->
    <string name="btnAdd">Add</string>
    <string name="quantity">Quantity</string>
    <string name="totalCalories">Total Calories</string>
    <string name="healthySuggestions">Health Suggestions</string>
    <string name="btnSave">Save</string>
    <string name="btnHistory">History</string>
    <string name="date">Date</string>
    <string name="selectDate">Select Date</string>
    <string name="btn_showList">Show</string>
    <string name="btn_onlineHelp">Online Help</string>
    <string name="btn_show">Show</string>
    <string-array name="SpinnerItems">
        <item>Egg</item>
        <item>Bread (per piece)</item>
        <item>Tomato</item>
        <item>Avocado (1/2)</item>
        <item>Rice (per tablespoon)</item>
        <item>Chicken Breast</item>
        <item>Salmon (per ounce)</item>
        <item>Carrot</item>
        <item>Apple</item>
        <item>Orange</item>
    </string-array>
    <!-- ************** DoctorAccount **************** -->
    <string name="DoctorAccount_tvLicenseNumber">License Number</string>
    <string name="DoctorAccount_tvPostalCode">Clinic Postal Code</string>
    <string name="DoctorAccount_btnLogOut">Log Out</string>
    <string name="DoctorAccount_tvPatientInquiries">Patient Inquiries</string>
    <string name="DoctorAccount_btnInfo">User Details</string>
    <string name="DoctorAccount_btnChat">Chat</string>
    <!-- ************** DoctorInfo **************** -->
    <string name="DoctorInfo_tvDoctorDetails">Doctor Details</string>
    <string name="DoctorInfo_tvInstruction">Change information below to update details</string>
    <string name="DoctorInfo_tvUserID">User ID</string>
    <string name="DoctorInfo_tvPassword">Password</string>
    <string name="DoctorInfo_tvFullName">Full Name</string>
    <string name="DoctorInfo_tvPostalCode">Clinic Postal Code</string>
    <string name="DoctorInfo_tvLicenseNumber">License Number</string>
    <string name="DoctorInfo_btnSave">Save Changes</string>
    <!-- ************** OnlineHelp **************** -->
    <string name="OnlineHelp_tvYourMessage">Your Message</string>
    <string name="OnlineHelp_tvChatHistory">Conversation History</string>
    <string name="OnlineHelp_btnSendMessage">Send</string>
    <string name="OnlineHelp_btnPayment">Pay</string>
    <string name="OnlineHelp_swtMSP">Do you have MSP coverage?</string>
    <string name="OnlineHelp_tvCost">Inquiry cost</string>
    <!-- ************** CashierAccount **************** -->
    <string name="CashierAccount_tvBalance">Balance</string>
    <string name="CashierAccount_tvPatients">Patients with due payment</string>
    <string name="CashierAccount_btnLogOut">Log Out</string>
    <string name="CashierAccount_btnInfo">User Details</string>
    <!-- ************** CashierInfo **************** -->
    <string name="CashierInfo_tvCashierDetails">Cashier Details</string>
    <string name="CashierInfo_tvInstruction">Change information below to update details</string>
    <string name="CashierInfo_tvUserID">User ID</string>
    <string name="CashierInfo_tvPassword">Password</string>
    <string name="CashierInfo_tvFullName">Full Name</string>
    <string name="CashierInfo_btnSave">Save Changes</string>
    <!-- ************** AdminAccount **************** -->
    <string name="AdminAccount_btnNewUser">Add New User</string>
    <string name="AdminAccount_btnLogOut">Log Out</string>
    <string name="AdminAccount_tvRegUsers">Registered Users</string>
    <!-- ************** AdminPatient **************** -->
    <string name="AdminPatient_tvPatientDetails">Patient</string>
    <string name="AdminPatient_tvUserID">User ID</string>
    <string name="AdminPatient_tvPassword">Password</string>
    <string name="AdminPatient_tvFullName">Full Name</string>
    <string name="AdminPatient_tvPostalCode">Postal Code</string>
    <string name="AdminPatient_tvAllergies">Allergies</string>
    <string name="AdminPatient_tvDiseases">Diseases</string>
    <string name="AdminPatient_btnSave">Save Changes</string>
    <string name="AdminPatient_btnDelete">Delete</string>
    <!-- ************** AdminDoctor **************** -->
    <string name="AdminDoctor_tvDoctorDetails">Doctor</string>
    <string name="AdminDoctor_tvUserID">User ID</string>
    <string name="AdminDoctor_tvPassword">Password</string>
    <string name="AdminDoctor_tvFullName">Full Name</string>
    <string name="AdminDoctor_tvPostalCode">Clinic Postal Code</string>
    <string name="AdminDoctor_tvLicenseNumber">License Number</string>
    <string name="AdminDoctor_btnSave">Save Changes</string>
    <string name="AdminDoctor_btnDelete">Delete</string>
    <!-- ************** AdminCashier **************** -->
    <string name="AdminCashier_tvCashierDetails">Cashier</string>
    <string name="AdminCashier_tvUserID">User ID</string>
    <string name="AdminCashier_tvPassword">Password</string>
    <string name="AdminCashier_tvFullName">Full Name</string>
    <string name="AdminCashier_btnSave">Save Changes</string>
    <string name="AdminCashier_btnDelete">Delete</string>
    <!-- ************** AdminAddUser **************** -->
    <string name="AdminAddUser_etUserID">User ID</string>
    <string name="AdminAddUser_etPassword">Password</string>
    <string name="AdminAddUser_rdbPatient">Patient</string>
    <string name="AdminAddUser_rdbDoctor">Doctor</string>
    <string name="AdminAddUser_rdbCashier">Cashier</string>
    <string name="AdminAddUser_etFullName">Full Name</string>
    <string name="AdminAddUser_etAllergies">Allergies</string>
    <string name="AdminAddUser_etDiseases">Diseases</string>
    <string name="AdminAddUser_etPostalCode">Postal Code</string>
    <string name="AdminAddUser_etLicense">License Number</string>
    <string name="AdminAddUser_btnAdd">Add User</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="name">Name</string>
</resources>