<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.adminUI.AdminAddUser">

    <EditText
        android:id="@+id/AdminAddUser_etUserID"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etUserID"
        android:inputType="textPersonName"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AdminAddUser_etPassword"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etPassword"
        android:inputType="textPassword"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_rdbGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/AdminAddUser_rdbGroup"
        android:layout_width="376dp"
        android:layout_height="150dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etFullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/AdminAddUser_rdbPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AdminAddUser_rdbPatient"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/AdminAddUser_rdbDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AdminAddUser_rdbDoctor"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/AdminAddUser_rdbCashier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AdminAddUser_rdbCashier"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/AdminAddUser_etFullName"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etFullName"
        android:inputType="textPersonName"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etAllergies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AdminAddUser_etAllergies"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etAllergies"
        android:inputType="textMultiLine"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etDiseases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AdminAddUser_etDiseases"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etDiseases"
        android:inputType="textMultiLine"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etPostalCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AdminAddUser_etPostalCode"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etPostalCode"
        android:inputType="textPersonName"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_etLicense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/AdminAddUser_etLicense"
        android:layout_width="376dp"
        android:layout_height="50dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AdminAddUser_etLicense"
        android:inputType="textPersonName"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/AdminAddUser_btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/AdminAddUser_btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/AdminAddUser_btnAdd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>