<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.SignUpActivity">

    <EditText
        android:id="@+id/SignUp_etUserID"
        android:layout_width="390dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etUserID"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SignUp_etPassword"
        android:layout_width="387dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etPassword"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etUserID" />

    <RadioGroup
        android:id="@+id/SignUp_rdbGroup"
        android:layout_width="382dp"
        android:layout_height="154dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etPassword">

        <RadioButton
            android:id="@+id/SignUp_rdbPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_rdbPatient"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/SignUp_rdbDoctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_rdbDoctor"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/SignUp_rdbCashier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp_rdbCashier"
            android:textColor="@color/white" />
    </RadioGroup>

    <EditText
        android:id="@+id/SignUp_etFullName"
        android:layout_width="381dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etFullName"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_rdbGroup" />

    <EditText
        android:id="@+id/SignUp_etAllergies"
        android:layout_width="383dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etAllergies"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etFullName" />

    <EditText
        android:id="@+id/SignUp_etDiseases"
        android:layout_width="379dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etDiseases"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etAllergies" />

    <EditText
        android:id="@+id/SignUp_etPostalCode"
        android:layout_width="382dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etClinicPostalCode"
        android:inputType="textPostalAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etDiseases" />

    <Button
        android:id="@+id/SignUp_btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginLeft="159dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:text="@string/SignUp_btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etLicense" />

    <EditText
        android:id="@+id/SignUp_etLicense"
        android:layout_width="383dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SignUp_etLicense"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_etPostalCode" />
</androidx.constraintlayout.widget.ConstraintLayout>