<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.patientUI.PatientFoodTracker">

    <Spinner
        android:id="@+id/foodList"
        android:layout_width="323dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:entries="@array/SpinnerItems"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:text="@string/btnAdd"
        app:layout_constraintBottom_toBottomOf="@+id/etQuantity"
        app:layout_constraintStart_toEndOf="@+id/etQuantity"
        app:layout_constraintTop_toTopOf="@+id/etQuantity"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/etQuantity"
        android:layout_width="209dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodList" />

    <TextView
        android:id="@+id/healthySuggestions"
        android:layout_width="245dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/healthySuggestions"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.427"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalories" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnSave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/btnHistory"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

    <TextView
        android:id="@+id/tvFoodList"
        android:layout_width="359dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/listbox"
        android:gravity="center"
        android:padding="10sp"
        android:textColor="#18957C"
        android:textColorLink="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantity" />

    <TextView
        android:id="@+id/tvCalories"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/totalCalories"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/dateOfConsumption"
        app:layout_constraintStart_toEndOf="@+id/dateOfConsumption"
        app:layout_constraintTop_toTopOf="@+id/dateOfConsumption" />

    <TextView
        android:id="@+id/dateOfConsumption"
        android:layout_width="138dp"
        android:layout_height="61dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/box"
        android:gravity="center"
        android:text="@string/selectDate"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFoodList" />

</androidx.constraintlayout.widget.ConstraintLayout>

