<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.LoginActivity">

    <EditText
        android:id="@+id/Login_etUserID"
        android:layout_width="395dp"
        android:layout_height="57dp"
        android:layout_marginTop="368dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Login_etUserID"
        android:inputType="textPersonName"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Login_etPassword"
        android:layout_width="395dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/box"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Login_etPassword"
        android:inputType="textPersonName|textPassword"
        android:textColor="#18957C"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_etUserID" />

    <Button
        android:id="@+id/Login_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/Login_btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_etPassword" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homeicon256" />

</androidx.constraintlayout.widget.ConstraintLayout>